--- a/codelandia/assets/css/style.css
+++ b/codelandia/assets/css/style.css
@@ -23,7 +23,7 @@
 
 .search {
     background-color: rgba(255, 255, 255, 0.2);
-    background-image: url(./assets/images/lupa.svg);
+    background-image: url(../images/lupa.svg);
     background-repeat: no-repeat;
     background-position: 20px;
     background-size: 23px;
@@ -63,7 +63,7 @@
 }
 
 .article__favorite-icon {
-    background-image: url(./assets/images/coracao.svg);
+    background-image: url(../images/coracao.svg);
     background-repeat: no-repeat;
     width: 24px;
     height: 20px;
