--- a/codelandia/assets/css/style.css
+++ b/codelandia/assets/css/style.css
@@ -1,5 +1,9 @@
+
+
+
+
 .header{
-    background: var(--linear);
+    background: var(--header-color);
     height: 250px;
 }
 
@@ -19,6 +23,17 @@
     font-size: 1.5rem;
     font-weight: 400;
     text-decoration: none;
+}
+
+.menu__item:nth-child(2) {
+    flex-grow: 1;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.theme-icon{
+    width: 1.6rem;
+    color: #fff;
 }
 
 .search {
@@ -49,7 +64,7 @@
 
 .article {
     padding: 23px;
-    background-color: var(--white);
+    background-color: var(--bg-item);
     border-radius: 5px;
     margin-bottom: 50px;
 }
@@ -66,7 +81,7 @@
 .article__favorite-button {
     outline: none;
     border: none;
-    background-color: var(--white);
+    background-color: transparent;
     cursor: pointer;
     width: 2.75rem;
     height: 2.75rem;
