--- a/jordanshoes/assets/css/style.css
+++ b/jordanshoes/assets/css/style.css
@@ -95,6 +95,7 @@ body {
 .shoes__card{
     align-items: center;
     background-color: var(--bgCard);
+    border-radius: 10px;
     cursor: pointer;
     display: flex;
     height: 30.0rem;
@@ -105,18 +106,24 @@ body {
 }
 
 .shoes__overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
     background-color: #18181880;
+    border-radius: 10px;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .5s ease;
+    width: 100%;
 }
-      
+
+.shoes__card:hover .shoes__item{
+    transform: scale(1.2) !important;
+    transition: .5s all ease !important;
+}
+
 .shoes__card:hover .shoes__overlay {
     opacity: 1;
 }
@@ -194,3 +201,20 @@ body {
         margin-top: 50px;
     }
 }
+
+/*Blink Effect*/
+.information-text::after {
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: blink .7s infinite;
+  }
+  
+  @keyframes blink {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
